<resources>
    <string name="app_name">Intelbras</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="titulo">Linhas e Ramais</string>
    <string name="matriz">Matriz</string>
    <string name="filiais">Possui filiais ?</string>
    <string name="analogicas">Quantas linhas analógicas ?</string>
    <string name="digitais">Quantas linhas digitais(E1)?</string>
    <string name="ip">Quantas linhas IP ?</string>
    <string name="gsm">Quantas linhas GSM ?</string>
    <string name="ramaisa">Quantos ramais analógicos ?</string>
    <string name="ramaisd">Quantos ramais digitais ?</string>
    <string name="ramaisip">Quantos ramais IP ?</string>
    <string name="resultado">Resultado</string>
    <string name="i16">Impacta 16</string>
    <string name="i40">Impacta 40</string>
    <string name="i60">Impacta 68i</string>
    <string name="i94">Impacta 94</string>
    <string name="i140">Impacta 140</string>
    <string name="i220">Impacta 220</string>
    <string name="i300">Impacta 300</string>

</resources>
