<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModelosActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/i16"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i40"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i60"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="160dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="76dp"
        android:layout_height="17dp"
        android:text="@string/i94"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/i140"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="298dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/i220"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="372dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:text="@string/i300"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="440dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/Impacta16"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="72dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/Impacta 40"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="71dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="72dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/Impacta 68i"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="149dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="72dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/Impacta 94"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="220dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="72dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/Impacta 140"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="291dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="72dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/Impacta 220"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="363dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="72dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/Impacta 300"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="433dp" />

</android.support.constraint.ConstraintLayout>